--- a/index.html
+++ b/index.html
@@ -69,54 +69,10 @@ active: Home
 				</p>
 			</div>
 		</div>
-<!-- 		
+
 		<div class="row">
 			<div class="col-md-12">
 				<hr />
-				<a id="completed-projects"></a>
-			</div>
-		</div>
-		{% assign projects = site.categories.completed-projects | sort: 'date'%} 
-		{% for post in projects %} 
-		{% assign odd = forloop.index0 | modulo:2 %} 
-		{%if odd == 0 %}
-		<div class="row featurette">
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					{{ post.title }} <span class="text-muted">({{post.team}})</span>
-				</h2>
-				<p class="lead">
-					{{ post.content}} <a href="{{post.project_url}}"
-						class="btn btn-default">Read more...</a>
-				</p>
-			</div>
-			<div class="col-md-5">
-				<a href="{{post.project_url}}"><img src="{{post.image}}" /></a>
-			</div>
-		</div>
-		{% else %}
-		<div class="row featurette">
-			<div class="col-md-5">
-				<a href="{{post.project_url}}"><img src="{{post.image}}" /></a>
-			</div>
-			<div class="col-md-7">
-				<h2 class="featurette-heading">
-					{{ post.title }} <span class="text-muted">({{post.team}})</span>
-				</h2>
-				<p class="lead">
-					{{ post.content}} <a href="{{post.project_url}}"
-						class="btn btn-default">Read more...</a>
-				</p>
-			</div>
-		</div>
-		{% endif %} 
-		{% endfor %}
-		<div class="row">
-			<div class="col-md-12">
-				<a id="ongoing-projects"></a>
-				<div class="page-header">
-					<h1>Ongoing projects</h1>
-				</div>
 			</div>
 		</div>
 		{% assign projects = site.categories.projects | sort: 'title' %} {%for post in projects %} {% assign odd = forloop.index0 | modulo:2 %}
@@ -124,7 +80,7 @@ active: Home
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					{{ post.title }} <span class="text-muted">({{post.team}})</span>
+					{{ post.title }} {%if post.acronym %} <span class="text-muted">({{post.acronym}})</span> {% endif %}
 				</h2>
 				<p class="lead">
 					{{ post.content}} <a href="{{post.project_url}}"
@@ -142,7 +98,7 @@ active: Home
 			</div>
 			<div class="col-md-7">
 				<h2 class="featurette-heading">
-					{{ post.title }} <span class="text-muted">({{post.team}})</span>
+					{{ post.title }} {%if post.acronym %} <span class="text-muted">({{post.acronym}})</span> {% endif %}
 				</h2>
 				<p class="lead">
 					{{ post.content}} <a href="{{post.project_url}}"
@@ -153,5 +109,4 @@ active: Home
 		{% endif %} {% endfor %}
 
 	</div>
--->
 </div>
