update playlist link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ active: Home
 				</p>
 				<p>
 					Video lectures are freely available on a dedicated <a
-						href="http://www.youtube.com/playlist?list=PLqRTLlwsxDL-ikzLwzQIS_R2YojZMvmJW">Youtube
+						href="https://www.youtube.com/playlist?list=PLqRTLlwsxDL8I8H0RDLbyiw1lRXQcmwZ8">Youtube
 						playlist</a> and on the teaching portal of the Politecnico di Torino.
 				</p>
 			</div>
